# sparse-bfgs

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: BFGS.h  LineSearch.h  MatrixOps.h
src/: BFGS.cpp  LineSearch.cpp  MatrixOps.cpp  main.cpp
